Fixes varios dark mode

--- a/css/downloads/_download.scss
+++ b/css/downloads/_download.scss
@@ -655,13 +655,14 @@ body.interior.download {
 	.google-ads {
 
 		&.single {
-			margin: 5px 6px 0 0;
+			margin: 25px auto 10px;
+			text-align: center;
 
 			&:before {
 				display: block;
 				content: 'Advertisement';
 				height: 15px;
-				line-height: 10px;
+				line-height: 5px;
 				font-size: 12px;
 				color: #aaa;
 				text-align: center;
@@ -682,8 +683,6 @@ body.interior.download {
 		float: left;
 		list-style-type: none;
 		position: relative;
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
 		box-sizing: border-box;
 		padding: 8px 0 0 15px;
 			
